# kimari-microcompress

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README_ES.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
configs/: kmc.default.yaml
docs/: ARCHITECTURE.md  BENCHMARK_PLAN.md  BENCHMARK_RESULTS_TEMPLATE.md  CHECKPOINT_WORKFLOW.md  DEDUPLICATION.md  DELTA_COMPRESSION.md  EXPERIMENTAL_LOADERS.md  FORMAT_SPEC.md  GGUF_CODECS.md  GGUF_SUPPORT.md  HUGGINGFACE_WORKFLOW.md  KIMARI_INTEGRATION.md  KIMARI_RUNTIME_PLAN.md  KMC_READER_API.md  LORA_WORKFLOW.md  PARTIAL_ACCESS.md  PUBLISHING_BENCHMARKS.md  REAL_MODEL_BENCHMARK.md  RESEARCH_NOTES.md  ROADMAP.md  RUNTIME_INTEGRATION_RESEARCH.md  SECURITY_MODEL.md  SELECTIVE_EXTRACTION.md  index.html
examples/: basic_roundtrip.py  kimari_cli_adapter.py  kimari_plugin_registration.py
prompts/: AGENT_MASTER_PROMPT.md  GGUF_AGENT.md  TENSOR_AWARE_AGENT.md
scripts/: bench_real_gguf.py  bench_real_small_model.py  bench_small_hf_model.py  create_demo_model.py  run_demo.sh
src/kmc/: __init__.py  __main__.py  archive.py  benchmark.py  cli.py  codecs.py  gguf.py  hashing.py  inspector.py  manifest.py  parallel.py  reader.py  reporting.py  tensor_inspector.py
src/kmc/codecs/: __init__.py  base.py  byteplane.py  floatplane.py  gguf_quant.py  legacy.py  raw.py  registry.py  selector.py  zlib_codec.py  zstd_codec.py
tests/: test_benchmark_inspector.py  test_checkpoint_workflow.py  test_gguf.py  test_lora_workflow.py  test_manifest.py  test_roundtrip.py  test_safetensors.py  test_security.py  test_v03_features.py  test_v04_codecs.py  test_v05_cli.py  test_v05_manifest.py  test_v06_features.py  test_v07_features.py  test_v08_features.py
tests/fixtures/: tensors.py
(+27 files in other folders)
