[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kimari-microcompress"
version = "0.6.0-alpha"
description = "Reversible lossless compression for AI models: streaming I/O, parallel compression, safetensors, GGUF, LoRA, checkpoints, tensor-aware codecs."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "KimariDB", email = "dev@kimari.dev"},
]
keywords = ["compression", "ai-models", "safetensors", "gguf", "lossless", "zstd", "checksum", "byteplane", "floatplane", "lora", "checkpoint", "ggml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Archiving :: Compression",
]
dependencies = [
    "zstandard>=0.21.0",
]

[project.optional-dependencies]
safetensors = [
    "safetensors>=0.4.0",
]
zipnn = [
    "zipnn>=0.3.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
]
all = [
    "kimari-microcompress[safetensors,zipnn]",
]

[project.scripts]
kmc = "kmc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["I001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
